cmake_minimum_required(VERSION 3.8)
project(morihuoshan)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(lr_interfaces REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(car_service src/car_service.cpp)
ament_target_dependencies(car_service rclcpp std_msgs lr_interfaces)

add_executable(car_client src/car_client.cpp)
ament_target_dependencies(car_client rclcpp std_msgs lr_interfaces)

install(TARGETS
  car_service
  car_client
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
